# MMY3D

./: AviFile.cpp  AviFile.h  CMakeLists.txt  CMakePresets.json  MMY3D.cpp  MMY3D.rc  ReadMe.md  Resource.h  stdafx.cpp  stdafx.h
.github/workflows/: cmake.yml
